[Bugfix] Fixed a bug with article top and bottom spacings not overwriting top-bottom-spacing

--- a/public/framework/scss/styles/_spacing.scss
+++ b/public/framework/scss/styles/_spacing.scss
@@ -66,7 +66,9 @@ $spacings-list: (
         }
       }
     }
+  }
 
+  @each $size, $spacing in $list {
     .top-spacing-#{$size} {
       > .inside {
         padding-top: var(--#{map-get($spacings-abbreviations, spacing)}-#{map-get($spacings-abbreviations, $size)});
